# FreeTypeGL-old

./: .gitignore  Example.hs  FreeTypeGL.cabal  LICENSE  Makefile  README.md  Setup.hs  TODO  demoTexture.hs  freetype-gl.cabal
Graphics/Rendering/: FreeTypeGL.hsc
Graphics/Rendering/FreeTypeGL/: Atlas.hsc  FontDesc.hs  FontManager.hsc  Markup.hsc  TextBuffer.hsc  Vec234.hsc
Graphics/Rendering/FreeTypeGL/Internal/: Atlas.hsc  FontDesc.hsc  FontManager.hsc  Markup.hsc  Shader.hsc  TextBuffer.hsc  TextureFont.hsc
demos/: atlasTexture.hs  bench.hs  hellobye.hs
shaders/: text.frag
src/: Makefile  arial-16.h  font-desc.c  font-desc.h  font-manager.c  font-manager.h  glyph-cache.c  glyph-cache.h  init.c  init.h  markup.h  opengl.h  platform.c  platform.h  run-demo  shader.c  shader.h  text-buffer.c  text-buffer.h  texture-atlas.c  texture-atlas.h  texture-font.c  texture-font.h  vec234.h  vector.c  vector.h  vertex-attribute.c  vertex-attribute.h  vertex-buffer.c  vertex-buffer.h
src/demo/: cccmdline  demo-ansi.c  demo-atb-agg.c  demo-benchmark.c  demo-cartoon.c  demo-console.c  demo-cube.c  demo-display-list.c  demo-font.c  demo-gamma.c  demo-glyph.c  demo-lcd.c  demo-line-aa.c  demo-makefont.c  demo-markup.c  demo-outline.c  demo-subpixel.c  demo-texture.c  makefont.c  run-demo
src/doc/: documentation.h
