Name:                FreeTypeGL
Version:             0.0.1
Synopsis:            Haskell binding for FreeType-GL library
Description:         Wrapper around FreeType-GL library.
License:             BSD3
License-file:        LICENSE
Author:              Eyal Lotem <eyal.lotem@gmail.com>
Maintainer:          Eyal Lotem <eyal.lotem@gmail.com>
Category:            Graphics
Build-type:          Simple
Extra-source-files:  src/*.c

Cabal-version:       >=1.8

Library
  -- Modules exported by the library.
  Exposed-modules: Graphics.Rendering.FreeTypeGL,
                   Graphics.Rendering.FreeTypeGL.FontManager,
                   Graphics.Rendering.FreeTypeGL.TextBuffer,
                   Graphics.Rendering.FreeTypeGL.Markup

  -- Packages needed in order to build this package.
  Build-depends: base > 3 && < 5, freetype2

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: hsc2hs
  ghc-options: -Wall
  include-dirs: src

  Extra-libraries: GL, GLU

  cc-options: -DFT_CONFIG_CONFIG_H=<ftconfig.h>
              -DFT2_BUILD_LIBRARY
              -DFT_CONFIG_MODULES_H=<ftmodule.h>
              -DDARWIN_NO_CARBON

  c-sources:
             src/edtaa3func.c
             src/font-manager.c
             src/platform.c
             src/shader.c
             src/text-buffer.c
             src/texture-atlas.c
             src/texture-font.c
             src/vector.c
             src/vertex-attribute.c
             src/vertex-buffer.c

-- source-repository head
--   type: git
--   location: git://

Flag examples
  Description: Build example programs
  Default: False

Executable FreeTypeGL-example

  if flag(examples)
    Buildable: True
    Build-depends: base > 3 && < 5, FreeTypeGL, GLFW-b, OpenGL
  else
    Buildable: False
  Main-is:       Example.hs

source-repository head
  type: git
  location: git://github.com/Peaker/GL.git
