Name:                FreeTypeGL
Version:             0.0.1
Synopsis:            Haskell binding for FreeType-GL library
Description:         Wrapper around FreeType-GL library.
License:             BSD3
License-file:        LICENSE
Author:              Eyal Lotem <eyal.lotem@gmail.com>
Maintainer:          Eyal Lotem <eyal.lotem@gmail.com>
Category:            Graphics
Build-type:          Simple
Extra-source-files:  src/*.c
Data-files:          shaders/text.frag shaders/text.vert

Cabal-version:       >=1.8

Flag use_font_config
-- problematic on windows
  Description: Build with fontconfig support
  Default: False

Library
  -- Modules exported by the library.
  Exposed-modules: Graphics.Rendering.FreeTypeGL,
                   Graphics.Rendering.FreeTypeGL.Internal.FontDesc,
                   Graphics.Rendering.FreeTypeGL.Internal.Shader,
                   Graphics.Rendering.FreeTypeGL.Internal.TextureFont,
                   Graphics.Rendering.FreeTypeGL.Internal.TextBuffer,
                   Graphics.Rendering.FreeTypeGL.Internal.Atlas,
                   Graphics.Rendering.FreeTypeGL.Internal.Markup
  Other-modules:   Paths_FreeTypeGL

  -- Packages needed in order to build this package.
  -- "freetype2" and "OpenGL" deps are just for the C build side
  Build-depends: base > 3 && < 5, freetype2, OpenGL

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: hsc2hs
  ghc-options: -Wall
  include-dirs: src

  if flag(use_font_config)
    cc-options: -DUSE_FONT_CONFIG
    Extra-libraries: fontconfig
  else
    cc-options:

  c-sources: src/init.c
             src/edtaa3func.c
             src/shader.c
             src/font-desc.c
             src/text-buffer.c
             src/texture-atlas.c
             src/texture-font.c
             src/vector.c
             src/vertex-attribute.c
             src/vertex-buffer.c

-- source-repository head
--   type: git
--   location: git://

Flag examples
  Description: Build example programs
  Default: False

Executable FreeTypeGL-example

  if flag(examples)
    Buildable: True
    Build-depends: base > 3 && < 5, FreeTypeGL, GLFW-b, OpenGL
  else
    Buildable: False
  Main-is:       Example.hs
  ghc-options: -Wall

source-repository head
  type: git
  location: git://github.com/Peaker/GL.git
