Name:                freetype-gl
Version:             0.0.1
Synopsis:            Haskell binding for FreeType-GL library
Description:         Wrapper around FreeType-GL library.
License:             BSD3
License-file:        LICENSE
Author:              Eyal Lotem <eyal.lotem@gmail.com>
Maintainer:          Eyal Lotem <eyal.lotem@gmail.com>
Category:            Graphics
Build-type:          Simple
Extra-source-files:  src/*.c

Cabal-version:       >=1.8

Library
  -- Modules exported by the library.
  Exposed-modules: Graphics.Rendering.FreeTypeGL,
                   Graphics.Rendering.FreeTypeGL.FontManager,
                   Graphics.Rendering.FreeTypeGL.TextBuffer,
                   Graphics.Rendering.FreeTypeGL.Markup

  -- Packages needed in order to build this package.
  Build-depends: base > 3 && < 5

  -- Modules not exported by this package.
  -- Other-modules:

  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  Build-tools: hsc2hs
  ghc-options: -Wall
  include-dirs: src include include/freetype/config
                include/freetype
                freetype2/base
                freetype2/truetype
                freetype2/type1
                freetype2/cff
                freetype2/cid
                freetype2/pfr
                freetype2/type42
                freetype2/winfonts
                freetype2/pcf
                freetype2/bdf
                freetype2/sfnt
                freetype2/autofit
                freetype2/pshinter
                freetype2/raster
                freetype2/smooth
                freetype2/cache
                freetype2/gzip
                freetype2/lzw
                freetype2/psaux
                freetype2/psnames

  Extra-libraries: GL, GLU

  cc-options: -DFT_CONFIG_CONFIG_H=<ftconfig.h>
              -DFT2_BUILD_LIBRARY
              -DFT_CONFIG_MODULES_H=<ftmodule.h>
              -DDARWIN_NO_CARBON

  c-sources:
             freetype2/base/ftsystem.c
             freetype2/base/ftdebug.c
             freetype2/base/ftinit.c
             freetype2/base/ftbase.c
             freetype2/base/ftbbox.c
             freetype2/base/ftbdf.c
             freetype2/base/ftbitmap.c
             freetype2/base/ftcid.c
             freetype2/base/ftfstype.c
             freetype2/base/ftgasp.c
             freetype2/base/ftglyph.c
             freetype2/base/ftgxval.c
             freetype2/base/ftlcdfil.c
             freetype2/base/ftmm.c
             freetype2/base/ftotval.c
             freetype2/base/ftpatent.c
             freetype2/base/ftpfr.c
             freetype2/base/ftstroke.c
             freetype2/base/ftsynth.c
             freetype2/base/fttype1.c
             freetype2/base/ftwinfnt.c
             freetype2/base/ftxf86.c
             freetype2/truetype/truetype.c
             freetype2/type1/type1.c
             freetype2/cff/cff.c
             freetype2/cid/type1cid.c
             freetype2/pfr/pfr.c
             freetype2/type42/type42.c
             freetype2/winfonts/winfnt.c
             freetype2/pcf/pcf.c
             freetype2/bdf/bdf.c
             freetype2/sfnt/sfnt.c
             freetype2/autofit/autofit.c
             freetype2/pshinter/pshinter.c
             freetype2/raster/raster.c
             freetype2/smooth/smooth.c
             freetype2/cache/ftcache.c
             freetype2/gzip/ftgzip.c
             freetype2/lzw/ftlzw.c
             freetype2/psaux/psaux.c
             freetype2/psnames/psmodule.c
             src/edtaa3func.c
             src/font-manager.c
             src/platform.c
             src/shader.c
             src/text-buffer.c
             src/texture-atlas.c
             src/texture-font.c
             src/vector.c
             src/vertex-attribute.c
             src/vertex-buffer.c

-- source-repository head
--   type: git
--   location: git://

Flag examples
  Description: Build example programs
  Default: False

Executable freetype-gl-example

  if flag(examples)
    Buildable: True
    Build-depends: base > 3 && < 5, freetype-gl
  else
    Buildable: False
  Main-is:       Example.hs
